SimonStewart: Updating to htmlunit 2.8
r9667